# radiosity

./: .gitignore  CMakeLists.txt  default.nix
src/: CMakeLists.txt
